# ml-ops-aws-eks-kubeflow

./: .gitignore  .gitlab-ci.yml  README.md  deploy.yaml
.github/workflows/: build_and_push_pipeline_component_images.yml  deploy_continuous_training.yml  deploy_infrastructure_on_aws.yml  destroy_infrastructure_on_aws.yml  install_ksonnet.yml  install_kubeflow_on_eks.yml  kubeflow_component_config.yml  terraform_apply.yml  terraform_destroy.yml  terraform_plan.yml  test.yml  uninstall_kubeflow.yml
deployments/enterprise/: Makefile
kubeflow_templates/: README.md
kubeflow_templates/kfserve/: Makefile  inference.py  (+4 more)
kubeflow_templates/kubeflow_pipelines/task_pool/v1/check_for_retraining/structured_data/check_feature_distribution/task_container/: Dockerfile  pyproject.toml
kubeflow_templates/kubeflow_pipelines/task_pool/v1/check_for_retraining/structured_data/check_feature_distribution/task_container/src/: aws.py  task.py
kubeflow_templates/kubeflow_pipelines/task_pool/v1/feature_engineering/task_container/: Dockerfile  pyproject.toml
kubeflow_templates/kubeflow_pipelines/task_pool/v1/feature_engineering/task_container/src/: aws.py  feature_engineering.py  task.py
kubeflow_templates/kubeflow_pipelines/task_pool/v1/interactive_visualizer/task_container/: Dockerfile  pyproject.toml
kubeflow_templates/kubeflow_pipelines/task_pool/v1/interactive_visualizer/task_container/src/: data_visualizer.py  interactive_visualizer.py  plotly_adapter.py  task.py
kubeflow_templates/kubeflow_pipelines/task_pool/v1/metadata/task_container/: Dockerfile  pyproject.toml
kubeflow_templates/kubeflow_pipelines/task_pool/v1/metadata/task_container/src/: task.py
kubeflow_templates/kubeflow_pipelines/task_pool/v1/model_generator_supervised/task_container/: Dockerfile  pyproject.toml
kubeflow_templates/kubeflow_pipelines/task_pool/v1/model_generator_supervised/task_container/src/: supervised_machine_learning.py  task.py
kubeflow_templates/kubeflow_pipelines/task_pool/v1/sampling/task_container/: Dockerfile  pyproject.toml
kubeflow_templates/kubeflow_pipelines/task_pool/v1/sampling/task_container/src/: aws.py  sampler.py  task.py
ml_ops_templates/: README.md
ml_ops_templates/kfserve/predictor/custom_predictor_sklearn/: Dockerfile  custom_model_endpoint_sklearn.yaml  pyproject.toml
ml_ops_templates/kfserve/predictor/custom_predictor_sklearn/src/: rest_api.py
ml_ops_templates/kubeflow_management/user_management/dex/streamlit_web_app/app/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_management/user_management/dex/streamlit_web_app/app/src/: app.py  kubeflow_user_management.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/batch_prediction/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/custom_predictor_canary/task_container/: Dockerfile  docker_build.sh  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/custom_predictor_canary/task_container/src/: rest_api.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/feature_selector/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/feature_selector/task_container/src/: evaluate_machine_learning.py  feature_selector.py  supervised_machine_learning.py  task.py  test_feature_selector.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/image_classification_generator/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/image_classification_generator/task_container/src/: cycle_gan.py  utils.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/image_processor/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/image_processor/task_container/src/: aws.py  task.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/image_translation_gpu/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/image_translation_gpu/task_container/src/: auto_encoder.py  cycle_gan.py  task.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/interactive_visualizer/task_container/: Dockerfile  docker_build.sh  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/interactive_visualizer/task_container/src/: aws.py  data_visualizer.py  file_handler.py  interactive_visualizer.py  plotly_adapter.py  task.py  test_data_visualizer.py  test_static.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/model_generator_supervised/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/model_generator_supervised/task_container/src/: aws.py  supervised_machine_learning.py  task.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/model_registry/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/model_registry/task_container/src/: aws.py  task.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/natural_language_processing/task_container/: Dockerfile  docker_build.sh  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/natural_language_processing/task_container/src/: natural_language_processing.py  task.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/parallelizer/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/parallelizer/task_container/src/: aws.py  parallelizer.py  task.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/sampling/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/sampling/task_container/src/: aws.py  sampler.py  task.py  test.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/seq_to_seq_generator/task_container/: pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/seq_to_seq_generator/task_container/src/: file_handler.py  seq_to_seq.py  task.py
ml_ops_templates/kubeflow_pipelines/task_pool/v1/slack_alerting/task_container/: Dockerfile  pyproject.toml
ml_ops_templates/kubeflow_pipelines/task_pool/v1/slack_alerting/task_container/src/: aws.py  kubeflow_exit_handler.py  task.py
(+408 files in other folders)
