[tool.poetry]
name = "predictor_sklearn"
version = "0.1.0"
description = "Sklearn format predictor of model endpoint inference pipeline"
authors = ["gianni <>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"