[tool.poetry]
name = "feature_engineering"
version = "0.1.0"
description = "Engineer (structured) features for machine learning algorithms"
authors = ["gianni <g.balistreri@shopware.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
s3fs = "^2023.9.2"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"