[tool.poetry]
name = "interactive_visualizer"
version = "0.1.0"
description = "Generate interactive visualization using easyexplore with plot.ly as a backbone"
authors = ["gianni <g.balistreri@shopware.com>"]

[tool.poetry.dependencies]
python = "^3.8"
easyexplore = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"