[tool.poetry]
name = "interactive_visualizer"
version = "0.1.0"
description = "Generate interactive visualization using plot.ly as a backbone"
authors = ["gianni <g.balistreri@shopware.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kfp = "^1.8.22"
boto3 = "^1.28.39"
geojson = "^2.5.0"
ipywidgets = "^7.5.1"
kaleido = "^0.2.1"
networkx = "^2.5"
pandas = "^2.1.0"
plotly = "^4.11.0"
scipy = "^1.5.2"
s3fs = "^2023.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"