[tool.poetry]
name = "supervised_machine_learning"
version = "0.1.0"
description = "Generate supervised machine learning models (non-neural networks)"
authors = ["gianni <g.balistreri@shopware.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
s3fs = "^2023.9.2"
scikit-learn = "^1.3.1"
xgboost = "^2.0.0"
catboost = "^1.2.2"
pygam = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"