[tool.poetry]
name = "sampling"
version = "0.1.0"
description = "Sampling data sets for training, testing and validation used for applying supervised machine learning models"
authors = ["gianni <g.balistreri@shopware.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.1"
pandas = "^2.1.0"
s3fs = "^2023.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"