[tool.poetry]
name = "predictor_sklearn"
version = "0.1.0"
description = "Sklearn format predictor of model endpoint inference pipeline"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kserve = "^0.10"
boto3 = "^1.28.39"
catboost = "^1.2.2"
pygam = "^0.9.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"