[tool.poetry]
name = "image_translation"
version = "0.1.0"
description = "Translate characteristics of images to others"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.39"
numpy = "^1.19.5"
keras = "^2.6.0"
opencv-python = "^4.5.5.62"
tensorflow = "^2.6.2"
s3fs = "^2023.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"