[tool.poetry]
name = "image_processor"
version = "0.1.0"
description = "Process images"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.39"
numpy = "^1.19.5"
opencv-python = "^4.5.5.62"
scikit-image = "^0.22.0"
s3fs = "^2023.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"