[tool.poetry]
name = "image_translation"
version = "0.1.0"
description = "Translate characteristics of images"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
boto3 = "^1.28.39"
keras = "2.15.0" #"*"
opencv-python = "^4.5.5.62"
#tensorflow = "*"
s3fs = "^2023.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"