[tool.poetry]
name = "interactive_visualizer"
version = "0.1.0"
description = "Generate interactive visualization using plot.ly as a backbone"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
boto3 = "^1.28.39"
geojson = "^2.5.0"
ipywidgets = "^7.5.1"
networkx = "^2.5"
pandas = "^2.1.4"
plotly = "^4.11.0"
#kaleido = "^0.2.1.post1"
scipy = "^1.5.2"
s3fs = "^2023.9.2"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"