[tool.poetry]
name = "natural_language_processing"
version = "0.1.0"
description = "Process natural language and text like data"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8.1"
pandas = "^2.1.0"
s3fs = "^2023.9.2"
scikit-learn = "^1.3.1"
spacy = "^3.7.2"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"