[tool.poetry]
name = "parallelizer"
version = "0.1.0"
description = "Prepare data for processing in parallel"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.39"
pandas = "^2.1.4"
s3fs = "^2023.9.2"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"