[tool.poetry]
name = "sampling"
version = "0.1.0"
description = "Sampling data sets for training, testing and validation used for applying supervised machine learning models"
authors = ["gianni <g.balistreri@shopware.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.39"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
s3fs = "^2023.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"