[tool.poetry]
name = "slack_alerting"
version = "0.1.0"
description = "Send alerts and messages to dedicated Slack channel"
authors = ["gianni <xxx>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.39"
kfp = "^1.8.22"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"